discussion/kv_engine/144351/144351_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43199: CompactConfig move= incorrect address test

Invoking the ==operator instead of testing the address

Change-Id: I9f719fd433eadb717732814f2b74f1ade6e468c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-01-26 12:38:43.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-26 13:23:48.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6725/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.cc:635:30: error: expected ";" after expression [clang-diagnostic-error]
        other.purge_before_ts 0;
                             ^
                             ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6725/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.cc:635:30:
error: expected ";" after expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6725/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33144/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\kvstore.cc(635): error C2143: syntax error: missing ";" before "constant" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33144/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28522/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore.cc:635:30:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28522/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7345/ : FAILURE

Compile error at [2021-01-26T12:40:33.544Z] ../kv_engine/engines/ep/src/kvstore.cc:635:30:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7345/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8387/ : FAILURE

Compile error at [2021-01-26T13:21:49.318Z] ../kv_engine/engines/ep/src/kvstore.cc:635:31:
error: expected ?;? before numeric constant
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8387/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8641/ : FAILURE

Compile error at [2021-01-26T13:21:16.165Z] ../kv_engine/engines/ep/src/kvstore.cc:635:30:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8641/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16190/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8259/ : FAILURE

Compile error at [2021-01-26T13:22:34.941Z] ../kv_engine/engines/ep/src/kvstore.cc:635:31:
error: expected ?;? before numeric constant
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8259/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5261/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
